<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4018.5">
  <DUT Name="E_SystemStartupSequence" Id="{158fc8de-0f2d-4c54-863f-939b850e5838}">
    <Declaration><![CDATA[TYPE E_SystemStartupSequence :
(

	eSystemStart_Start						:= 0,
	eSystemStart_Init						:= 10,
	eSystemStart_LedOn						:= 100,
	eSystemStart_LedOff						,
	eSystemStart_Done						:= 500,
	eSystemStart_ErrorStep 					:= 999,
	eSystemStart_NoError
	
);
END_TYPE
(* End *)]]></Declaration>
  </DUT>
</TcPlcObject>